feat: service use case and test for search heroes
